--- a/.gitignore
+++ b/.gitignore
@@ -243,10 +243,13 @@ cover/
 *.pot
 
 # Django stuff:
-*.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+
+# Application logs
+*.log
+app.log
 
 # Flask stuff:
 instance/
