--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,12 @@ dependencies = [
     "typer>=0.20.0",
 ]
 
+[project.optional-dependencies]
+test = [
+    "pytest>=8.0.0",
+    "pytest-mock>=3.12.0",
+]
+
 [project.scripts]
 app = "console_app:app"
 
